skiplang/compiler/invalid_tests/runtime/try_catch_continue_1.sk
fun main(): void {
  i = 0;
  while (i < 1) {
    try {
      !i = i + 1;
      if (i == 0) continue
    } catch {
    | _ -> void
    }
  }
}
